# N-Queens-Solver

./: CMakeLists.txt  README.md
src/: board.c  board.h  main.c  solver.c  solver.h
tests/: board_test.h  solver_test.h  unitTests.c
